--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,3 @@
-@font-face {
-    font-family: Acumin;
-    font-weight: bold;
-    src: url("Acumin-BdPro.otf") format("opentype");
-}
-
 #app-container {
     width: 100%;
     max-width: none;
@@ -42,7 +36,7 @@ H5 {
 }
 
 H5, H3 {
-    font-family: Acumin, "Helvetica Neue", sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
 }
 
 #left-column {
